--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^1.4.0
   url_launcher: ^6.3.1
   flutter_web_auth_2: ^4.1.0
+  flutter_secure_storage: ^9.2.4
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
